# github-money-ops

./: .gitignore  LICENSE  NEXT_REQUIRED_INFO.md  OPERATING_POLICY.md  PAYMENT_SETUP.md  README.md  assets_profile_readme.md  bounty_response_template.md  pyproject.toml
config/: profile.json  sources.json
prompts/: autonomous_runner.md
scripts/: run_scout.sh
src/money_ops/: __init__.py  scout.py
